# weather

./: CMakeLists.txt  ReadMe.md  city_code.json  main.cpp  weather_data.h  weather_tool.h  weather_widget.cpp  weather_widget.h  weather_widget.ui
weatherIcons/: weatypeico.qrc
